fix not collapsin on more than 1556px of screen width

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -101,3 +101,9 @@ body {
         display: block;
     }
 }
+
+@media (min-width: 1556px) {
+    .collapse {
+        display: block;
+    }
+}
